# llvm2cryptoline

./: .gitignore  CMakeLists.txt  README.md
examples/PQClean/kyber512-dbbfe0df/: ntt.c  ntt.ll  ntt_PQCLEAN_KYBER512_CLEAN_ntt_auto.cl  ntt_PQCLEAN_KYBER512_CLEAN_ntt_ugly.cl  reduce.ll  reduce_PQCLEAN_KYBER512_CLEAN_montgomery_reduce_auto.cl  reduce_PQCLEAN_KYBER512_CLEAN_montgomery_reduce_tuned.cl
examples/PQCrypto-SIDH/p434-ecf93e9/: P434.ll  fp_generic.ll  fp_generic_digit_x_digit_auto.cl  fp_generic_digit_x_digit_tuned.cl  fp_generic_fpadd434_auto.cl  fp_generic_fpadd434_tuned.cl  fp_generic_fpcorrection434_auto.cl  fp_generic_fpcorrection434_tuned.cl  fp_generic_fpneg434_auto.cl  fp_generic_fpneg434_tuned.cl  fp_generic_fpsub434_auto.cl  fp_generic_fpsub434_tuned.cl  fp_generic_unroll.c  fp_generic_unroll.ll  fp_generic_unroll_rdc_mont_auto.cl  fp_generic_unroll_rdc_mont_tuned.cl
examples/PQCrypto-SIDH/p503-ecf93e9/: P503.ll  fp_generic.ll  fp_generic_digit_x_digit_tuned.cl  fp_generic_fpadd503_auto.cl  fp_generic_fpadd503_tuned.cl  fp_generic_fpcorrection503_auto.cl  fp_generic_fpcorrection503_tuned.cl  fp_generic_fpneg503_auto.cl  fp_generic_fpneg503_tuned.cl  fp_generic_fpsub503_auto.cl  fp_generic_fpsub503_tuned.cl  fp_generic_unroll.ll  fp_generic_unroll_rdc_mont-post.py  fp_generic_unroll_rdc_mont_auto.cl  fp_generic_unroll_rdc_mont_tuned.cl
examples/PQCrypto-SIDH/p610-ecf93e9/: P610.ll  (+14 more)
src/: LegacyTranslator.cpp  LegacyTranslator.h  LegacyTypes.cpp  LegacyTypes.h  Translator.cpp  Translator.h  Types.cpp  Types.h  Utils.cpp  Utils.h  main.cpp
(+191 files in other folders)
